<resources>
    <string name="app_name">Calculendar</string>
    <string name="title_activity_calculendar_about">Calculendar</string>
    <string name="app_about_action_text">About</string>
    <string name="app_analytics_action_text">Change opt-in Status</string>
    <string name="version_header">Version %s</string>
    <string name="calculation_result_formatter">The interval from %1$s to %2$s with %3$d exclusions is %4$d %5$s</string>
    <string name="developer_name_header">Developers</string>
    <string name="button_select_range">Select Date Range</string>
    <string name="date_picker_dialog_title">Select Date Range</string>
    <string name="custom_date_dialog_title">Custom Excluded Dates</string>
    <string name="button_select_custom">Select Custom Dates</string>
    <string name="btn_perform_calculation">Perform Calculation</string>
    <string name="exclusion_options_header">Select Date Exclusion Options</string>
    <string name="custom_dates_formatter">%1$d Custom %2$s Selected</string>
    <string name="disabled_message_text">This shortcut is not currently enabled</string>
    <string name="shortcut_long_text">Open the app to the new calculation dialog</string>
    <string name="shortcut_short_text">New Calculation</string>
    <string name="build_id_formatter">Build Id: %s</string>

    <string name="first_run_preference_name">first_run</string>
    <string name="day_night_preference_name">day_night_mode</string>
    <string name="shared_preference_file_name">com.kennethfechter.calculendar.prefs</string>

    <string name="preference_name_analytics_level">analytics_level</string>
    <string name="full_analytics_preference_value">Full</string>
    <string name="crash_only_analytics_preference_value">Crash</string>
    <string name="no_analytics_preference_value">Off</string>

    <string name="dialog_button_full_analytics">Full Analytics</string>
    <string name="dialog_button_crash_only">Crash Only</string>
    <string name="dialog_button_opt_out">Opt-Out</string>

    <string name="radio_day_mode_text">Light Theme</string>
    <string name="radio_night_mode_text">Dark Theme</string>
    <string name="radio_battery_saver_mode_text">Follow Battery Saver</string>
    <string name="radio_auto_mode_text">Follow System</string>

    <string name="theme_dialog_title">Set Application Theme</string>

    <string name="preference_day_mode_value">Day</string>
    <string name="preference_night_mode_value">Night</string>
    <string name="preference_battery_saver_mode_value">Battery</string>
    <string name="preference_auto_mode_value">Auto</string>


    <string name="opt_in_dialog_title">Analytics Opt-In</string>
    <string name="opt_in_dialog_message">
        This app can optionally collect analytics data.
        This data can be used to help debug and fix crashes and improve the app.
        There are two levels of analytics, crash only and full. in crash only mode,
        only application crashes will be logged. In full analytics mode, the application
        will collect additional anonymous usage data. You can change your opt-in status at any time
        by selecting the bug button on the action bar. Once set, changing status requires
        an application restart.
    </string>
    <string name="app_daynight_action_text">Set Day/Night Mode</string>

    <plurals name="custom_dates">
        <item quantity="one">Date</item>
        <item quantity="other">Dates</item>
    </plurals>
    <plurals name="calculated_days">
        <item quantity="one">Day</item>
        <item quantity="other">Days</item>
    </plurals>
</resources>