<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="developer_names">
        <item>Kenneth Fechter</item>
        <item>Graham Klein</item>
        <item>Tobyn Collinsworth</item>
    </string-array>
    <string-array name="developer_profiles">
        <item>https://www.linkedin.com/in/kafechter/</item>
        <item>https://www.linkedin.com/in/graham-klein-04b976106/</item>
        <item>https://www.linkedin.com/in/tobyncollinsworth/</item>
    </string-array>
</resources>